# my-strava-mcp

./: .gitignore  README.md  pyproject.toml  run.py
src/strava_mcp/: __main__.py  main.py
src/strava_mcp/auth/: strava_auth.py
src/strava_mcp/data/: data_handler.py
src/strava_mcp/server/: server.py  test_client.py
