[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my-strava-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
dependencies = [
    "fastmcp>=2.11.3",
    "python-dotenv>=1.1.1",
    "stravalib>=2.4",
    "tenacity>=9.1.2",
]

[tool.setuptools.packages.find]
where = ["src"]
